<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_right_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.333" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline_top_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.075" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline_bottom_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9767442" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_left_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.025" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.975" />

    <EditText
        android:id="@+id/bookID_id"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/book_id_hint"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_right_editText"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline_left_button"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline_top_editText" />

    <EditText
        android:id="@+id/bookTitle_id"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/book_title_hint"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_right_editText"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline_left_button"
        app:layout_constraintTop_toBottomOf="@+id/bookID_id" />

    <EditText
        android:id="@+id/bookIsbn_id"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/book_isbn_hint"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_right_editText"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline_left_button"
        app:layout_constraintTop_toBottomOf="@+id/bookTitle_id" />

    <EditText
        android:id="@+id/bookAuthor_id"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/book_author_hint"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_right_editText"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline_left_button"
        app:layout_constraintTop_toBottomOf="@+id/bookIsbn_id" />

    <EditText
        android:id="@+id/bookDescription_id"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/book_description_hint"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_right_editText"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline_left_button"
        app:layout_constraintTop_toBottomOf="@+id/bookAuthor_id" />

    <EditText
        android:id="@+id/bookPrice_id"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/book_price_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_right_editText"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline_left_button"
        app:layout_constraintTop_toBottomOf="@+id/bookDescription_id" />

    <EditText
        android:id="@+id/bookCopiesSold_id"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/copies_sold_hint"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_right_editText"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline_left_button"
        app:layout_constraintTop_toBottomOf="@+id/bookPrice_id" />

    <View
        android:id="@+id/gestureView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#1DD4B8"
        app:layout_constraintBottom_toTopOf="@+id/clearButton"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_right_button"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline_right_editText"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline_top_editText" />

    <Button
        android:id="@+id/loadLastBookButton"
        android:layout_width="96dp"
        android:layout_height="72dp"
        android:onClick="onLoadLastBookButtonClick"
        android:text="@string/load_last_book_text"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline_left_button"
        app:layout_constraintTop_toBottomOf="@+id/bookCopiesSold_id" />

    <Button
        android:id="@+id/doublePriceButton"
        android:layout_width="96dp"
        android:layout_height="72dp"
        android:onClick="onDoublePriceButtonClick"
        android:text="@string/double_price_button_text"
        app:layout_constraintEnd_toStartOf="@+id/clearButton"
        app:layout_constraintStart_toEndOf="@+id/loadLastBookButton"
        app:layout_constraintTop_toBottomOf="@+id/bookCopiesSold_id" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="96dp"
        android:layout_height="72dp"
        android:onClick="onClearButtonClick"
        android:text="@string/clear_button_text"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_right_button"
        app:layout_constraintTop_toBottomOf="@+id/bookCopiesSold_id" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listOfBooksRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline_bottom_button2"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline_right_button"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline_left_button"
        app:layout_constraintTop_toBottomOf="@+id/doublePriceButton" />

</androidx.constraintlayout.widget.ConstraintLayout>