<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardBackgroundColor="@color/purple_500">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/row_one_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bookIdPrompt_card_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/book_id_prompt"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/bookId_card_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/bookIsbnPrompt_card_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/book_isbn_prompt"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/bookIsbn_card_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/bookDescriptionPrompt_card_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/book_description_prompt"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/bookDescription_card_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_two_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/row_one_id"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bookTitlePrompt_card_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/book_title_prompt"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/bookTitle_card_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/bookAuthorPrompt_card_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/book_author_prompt"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/bookAuthor_card_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/bookPricePrompt_card_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/book_price_prompt"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/bookPrice_card_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
